<resources>
    <string name="app_name">LAM</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="iniciar_sesion">Iniciar sesión</string>

    <string name="splash_dialog_message">Tenemos un problema con nuestros servidores, por favor vuelve a ingresar más tarde</string>
    <string name="spalsh_positive_button">Reintentar ahora</string>
    <string name="splash_negative_button">Ingresar más tarde</string>

    <string name="home_title">Lecciones Aprendidas de Malvinas</string>
    <string name="home_description">Bienvenidos a los espacios patrimoniales de la Guarnicion Aerea Córdoba (GAC) \n\n Para comenzar escanee un QR</string>
    <string name="home_about">App desarrollada por UNDEX - 2022</string>
    <string name="home_help_icon">\?</string>

    <string name="help_continue_button">Continuar</string>

    <string name="terms_and_conditions_title">Términos y Condidiciones de uso</string>
    <string name="terms_and_conditions_description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in \n\n ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? The standard Lorem Ipsum passage, used since the 1500s I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure? \n\n Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="terms_and_conditions_accept_text">He leído y acepto los términos y condiciones.</string>

    <string name="welcome_screen_text_description">LAM, “Lecciones Aprendidas de Malvinas”, es una aplicación en donde podrá acceder a los testimonios y los desafíos ingenieriles que han sorteado nuestros oficiales ingenieros militares de la Fuerza Aérea Argentina que participaron en el conflicto de Malvinas. Además, podrán acceder a la muestra de piezas en exposición en la Guarnición Área de Córdoba. \n\nModo de uso: si está interesado en conocer más acerca del conflicto de Malvinas podrá acceder a la misma a través del botón Ver contenido (a la derecha), en donde encontrará un listado de testimonios, entrevistas y piezas de los museos. \n\n En caso de que se encuentre en alguna exposición o jornadas abiertas organizadas por la Guarnición Aérea de Córdoba (Fuerza Aérea Argentina), podrá acceder a la información a través de un botón de QR (a la izquierda)  en donde podrá escanear el QR de las piezas que se encuentran en la exposición.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Juan Carlos</string>
    <string name="nav_header_subtitle">juan.carlos@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_cerrarSesion">Cerrar Sesión</string>
    <string name="menu_conf">Configuración</string>
    <string name="menu_perfil">Perfil</string>
    <string name="text_opc_log">Debes ingresar o registrarte para\n poder usar la app!</string>
    <string name="txt_ingresar">Ingresar</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_bienvenido_app">Bienvenido a la app de museos</string>
    <string name="hint_usuario_edit">Nombre de usuario</string>
    <string name="hint_contra_edit">Contraseña</string>
    <string name="txt_olvidaste">Olvidaste tu contraseña?</string>
    <string name="txt_recuperar_contra">Recuperar contraseña</string>
    <string name="hint_email_edit">Email</string>
    <string name="txt_recuperar_btn">Recuperar</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="txt_bienvenido">Bienvenido</string>
    <string name="txt_muchos_museos">Te esperan muchos museos\npor conocer!</string>

    <string name="txt_result_qr">Esta aeronave (matricula C-709) llegó al país a partir de 1983, provenientes de Israel, donde originalmente operaron en la Fuerza Aérea Israelí bajo la denominación “Shahak” (MIIICJ). La mayoría de estas aeronaves intervinieron en el conflicto o guerra de Yom Kipur, también conocida como guerra del Ramadán o guerra de Octubre. Posteriormente operaron por un tiempo en la X Brigada Aérea con asiento en Rio Gallegos, donde nació el Escuadrón ”Guerreros del Hielo”. Poco tiempo después fueron reemplazados en esta misma Unidad por los aviones que nuestro País había adquirido a la República del Perú en 1982, los MIRAGE-VP. De esta forma todos los MIRAGE III CJ, pasaron a prestar servicios en la IV Brigada Aérea con asiento en MENDOZA, Cuna de la Aviación de CAZA.</string>
    <string name="txt_titulo_resulqr">Mirage IIICJ</string>
    <string name="btn_escanear_qr">Escanear QR</string>
    <string name="btn_ver_contenido">Ver contenido</string>
    <string name="txt_favoritos">Favoritos</string>
    <string name="txt_descrip_item_fav">El Retrato de Lisa Gherardini, esposa de Francesco del Giocondo, ​ más conocido como La Gioconda o La Mona Lisa, es una obra pictórica del polímata renacentista italiano Leonardo da Vinci.</string>
    <string name="qu_te_diviertas">¡Qué te diviertas!</string>
    <string name="version">Versión 1.0.0</string>
    <string name="apellidos">Cano, Pacha</string>
    <string name="juan_carlos">Juan Carlos</string>
    <string name="qrs_escaneados">QRs escaneados</string>
    <string name="_8">8</string>
    <string name="qrs_no_escaneados">QRs no escaneados</string>
    <string name="_21">21</string>
    <string name="compartir_mi_perfil">Compartir mi perfil</string>
    <string name="cerrando_sesion">Cerrando sesión!</string>
    <string name="nombre">Nombre</string>
    <string name="juancarlos_gmail_com">juancarlos@gmail.com</string>
    <string name="hint_asterisco">******************</string>
    <string name="guardar">Guardar</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="favoritos">Favoritos</string>
    <string name="custom_loading_text">Cargando...</string>
    <string name="item_detail_watch_video">Reproducir video en Youtube</string>
    <string name="item_detail_play_sound">Reproducir sonido</string>
    <string name="item_detail_stop_sound">Detener sonido</string>

</resources>