<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".home.HomeFragment">

    <ImageView
        android:id="@+id/help_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_10dp"
        android:background="@drawable/ic_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_10dp"
        android:fontFamily="@font/george_bold"
        android:text="@string/home_title"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_icon" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_10dp"
        android:fontFamily="@font/george_regular"
        android:gravity="center"
        android:text="@string/home_description"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tittle" />

    <ImageView
        android:id="@+id/logo_qr"
        android:layout_width="@dimen/dim_150dp"
        android:layout_height="@dimen/dim_150dp"
        android:layout_marginTop="@dimen/dim_50dp"
        android:src="@drawable/qr_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_15dp"
        android:layout_marginEnd="@dimen/dim_40dp"
        android:text="@string/btn_escanear_qr"
        android:theme="@style/main_button"
        app:layout_constraintBottom_toTopOf="@id/text_about"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_see_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_15dp"
        android:text="@string/btn_ver_contenido"
        android:theme="@style/main_button"
        app:layout_constraintBottom_toTopOf="@id/text_about"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_6sp"
        android:fontFamily="@font/george_light"
        android:gravity="center"
        android:text="@string/home_about"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>