<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/t_y_c_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_20dp"
        android:padding="@dimen/dim_10dp"
        android:text="@string/terms_and_conditions_title"
        android:textAlignment="center"
        android:textSize="@dimen/dim_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/t_y_c_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dim_10dp"
        app:layout_constraintBottom_toTopOf="@id/t_y_c_accept_check_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/t_y_c_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/t_y_c_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/terms_and_conditions_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <CheckBox
        android:id="@+id/t_y_c_accept_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_15dp"
        android:gravity="center"
        android:text="@string/terms_and_conditions_accept_text"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        app:layout_constraintTop_toBottomOf="@id/t_y_c_scroll_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_10dp"
        android:enabled="false"
        android:text="@string/help_continue_button"
        android:theme="@style/main_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/t_y_c_accept_check_box" />

</androidx.constraintlayout.widget.ConstraintLayout>