<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.conf.ConfFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_20dp"
            android:src="@drawable/iua"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_ayuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_25dp"
            android:paddingStart="@dimen/dim_25dp"
            android:paddingEnd="@dimen/dim_25dp"
            android:text="@string/welcome_screen_text_description"
            android:textAlignment="center"
            android:textColor="@color/grey_letter"
            android:textSize="@dimen/dim_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/text_ayuda2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_50dp"
            android:text="@string/qu_te_diviertas"
            android:textColor="@color/secondary_color"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_ayuda" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_20sp"
            android:layout_marginBottom="@dimen/dim_20sp"
            android:background="@drawable/rounded_btn_enabled"
            android:paddingStart="@dimen/dim_15dp"
            android:paddingEnd="@dimen/dim_15dp"
            android:text="@string/help_continue_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_ayuda2" />

        <TextView
            android:id="@+id/text_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_15dp"
            android:layout_marginTop="@dimen/dim_20dp"
            android:layout_marginBottom="@dimen/dim_10dp"
            android:text="@string/version"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_close" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>